<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <RadioGroup
        android:id="@+id/rgUnoS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettingsS">

        <RadioButton
            android:id="@+id/rbDefectoS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbDefectoS" />

        <RadioButton
            android:id="@+id/rbPersonalizadoS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbPersonalizadoS"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvTiempoS"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/tvTiempoS"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etTiempoS"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgDosS" />

    <EditText
        android:id="@+id/etTiempoS"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvTiempoS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTiempoS" />

    <TextView
        android:id="@+id/tvIntentosS"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:inputType="number"
        android:text="@string/tvIntentosS"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTiempoS" />

    <EditText
        android:id="@+id/etIntentoS"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvIntentosS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/tvIntentosS"
        app:layout_constraintTop_toTopOf="@+id/tvIntentosS" />

    <Button
        android:id="@+id/btnGuardarS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:onClick="onClick"
        android:text="@string/btnGuardarS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgDosS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgUnoS">

        <RadioButton
            android:id="@+id/rbTiempoS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbTiempoS" />

        <RadioButton
            android:id="@+id/rbIntentosS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbIntentosS" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvPalabraS"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/tvPalabraS"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIntentosS"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/etPalabrasS"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvPalabraS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/tvPalabraS"
        app:layout_constraintTop_toTopOf="@+id/tvPalabraS" />

    <TextView
        android:id="@+id/tvSettingsS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvSettingsS"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="71dp"
        android:layout_height="57dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSettingsS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSettingsS"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@mipmap/ic_launcher" />


</android.support.constraint.ConstraintLayout>